2007-01-29  Neil Jagdish Patel  <njp@Fedora>

	* src/awn-bar.c: (do_shape_combine_mask):made static
	* src/awn-title.c: (do_shape_combine_mask), (_update_input_shape):made static, added support for gtk+ < 2.10
	* src/awn-window.c: (do_shape_combine_mask):made static

2007-01-28 Neil J. Patel <njpatel@gmail.com>

	* avant-preferences/Makefile.am: Adjust EXTRA_DIST to include glade file
	* awn-bar.c: Support for gtk+ < 2.10
	* awn-window.c: Support got gtk+ < 2.10

2007-01-28 Neil J. Patel <njpatel@gmail.com>

	* avant-window-navigator: Initial Release - 0.0.1

2007-01-20 Neil J. Patel <njpatel@gmail.com>

	* avant-window-navigator: Initial Import